@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkStubLib.c,v 1.16 2007/09/17 14:58:04 dgp Exp $
+ * RCS: @(#) $Id: tkStubLib.c,v 1.17 2007/09/18 16:12:19 dgp Exp $
  */
 
 /*
@@ -98,7 +98,13 @@ Tk_InitStubs(
             count += !isdigit(*p++);
         }
         if (count == 1) {
-            if (0 != strncmp(version, actualVersion, strlen(version))) {
+	    CONST char *q = actualVersion;
+
+	    p = version;
+	    while (*p && (*p == *q)) {
+		p++; q++;
+	    }
+            if (*p) {
                 return NULL;
             }
         } else {
